main/etc/kubernetes/manifests/svc-hasher.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasher
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hasher-po
  type: ClusterIP
