main/etc/kubernetes/manifests/netpol-worker.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-netpol
spec:
  podSelector:
    matchLabels:
      app: worker-po
  policyTypes:
    - Ingress
